--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
+  "name": "mywebpackstarter",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open",
+    "build": "webpack"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
-    "gh-pages": "^3.0.0",
     "hint": "^2.0.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
-    "stylelint": "^13.12.0",
+    "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^5.0.1",
-    "svg-url-loader": "^8.0.0",
+    "stylelint-scss": "^3.21.0",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
-  "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
